--- a/app/src/main/res/drawable/ic_home_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_home_black_24dp.xml
@@ -1,9 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="1024"
+    android:viewportHeight="1024"
+    android:width="200dp"
+    android:height="200dp">
+
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+        android:fillColor="#707070"
+        android:pathData="M945 495.2L540.5 144.5a43.23 43.23 0 0 0-57 0L79.1 495.3c-18.2 15.8-20.2 43.2-4.4 61.4 15.6 18.2 43.2 20.2 61.4 4.4L512 235l376.1 326.1c8.2 7.1 18.4 10.6 28.4 10.5 12.2 0 24.2-5 32.9-15 15.7-18.1 13.8-45.6-4.4-61.4z" />
+    <path
+        android:fillColor="#707070"
+        android:pathData="M163.6 560.1V845c0 36.8 30.2 67 67 67h191V645.5c0-22.1 18.1-40.2 40.2-40.2h100.5c22.1 0 40.2 18.1 40.2 40.2V912h191c36.8 0 67-30.2 67-67l0.1-284.9L512 257.8 163.6 560.1zM802.7 239.9h-55.3c-11.1 0-20.1 9-20.1 20.1v21l95.6 82.8V260h-0.1c0-11.1-9-20.1-20.1-20.1zM852.4 141s-30.2 49.2-77.1 86.8c132.1 12.1 110.6-115.3 110.6-115.3-116-8.9-115 88.5-113.4 110.6 18.1-18.1 43-54.2 79.9-82.1zM759.9 220.1c-17-14.3-35.1-37.6-44.3-46.7 0 0 28.5 17.8 48.8 42.7 2.1-15.9 5.6-80.8-80.6-73.8 0 0-12.1 90.6 76.1 77.8z" />
 </vector>
