--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,15 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--主页内容-->
     <RelativeLayout
         android:id="@+id/hp_ll_top"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="80dp">
         <com.example.learningmachineparentsapp.View.RoundImageView
             android:id="@+id/hp_riv_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@mipmap/added"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"/>
@@ -23,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="云淡风轻"
-            android:textSize="16sp"
+            android:textSize="22sp"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/hp_riv_icon"
             android:layout_centerVertical="true"/>
@@ -36,58 +35,69 @@
             android:layout_marginRight="20dp"/>
     </RelativeLayout>
 
-    <com.xuexiang.xui.widget.banner.recycler.BannerLayout
-        android:id="@+id/hp_bl_banner"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/hp_ll_top"
-        app:bl_autoPlaying="true"
-        app:bl_centerScale="1.3"
-        app:bl_itemSpace="10dp"
-        app:bl_moveSpeed="1.8" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/hp_ll_top">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <com.xuexiang.xui.widget.banner.recycler.BannerLayout
+                android:id="@+id/hp_bl_banner"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="10dp"
+                app:bl_autoPlaying="true"
+                app:bl_centerScale="1.3"
+                app:bl_itemSpace="10dp"
+                app:bl_moveSpeed="1.8" />
 
-    <LinearLayout
-        android:id="@+id/ll1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/hp_btn_toupload"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:text="上传视频" />
-        <Button
-            android:id="@+id/hp_btn_towatch"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:layout_toRightOf="@+id/hp_btn_toupload"
-            android:layout_alignTop="@+id/hp_btn_toupload"
-            android:layout_centerHorizontal="true"
-            android:text="学习监测"/>
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/hp_bl_banner"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/hp_btn_tovideochat"
+                    android:layout_width="170dp"
+                    android:layout_height="140dp"
+                    android:layout_margin="10dp"
+                    android:background="@mipmap/videochat"/>
+                <Button
+                    android:id="@+id/hp_btn_tohomework"
+                    android:layout_width="170dp"
+                    android:layout_height="140dp"
+                    android:layout_margin="10dp"
+                    android:layout_toRightOf="@+id/hp_btn_toupload"
+                    android:layout_alignTop="@+id/hp_btn_toupload"
+                    android:layout_centerHorizontal="true"
+                    android:background="@mipmap/homework"/>
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/ll1"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/hp_btn_tohomework"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:text="布置作业"/>
-        <Button
-            android:id="@+id/hp_btn_tomessage"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:text="消息通知"/>
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/ll1"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/hp_btn_tocontrol"
+                    android:layout_width="170dp"
+                    android:layout_height="140dp"
+                    android:layout_margin="10dp"
+                    android:background="@mipmap/control"/>
+                <Button
+                    android:id="@+id/hp_btn_towatch"
+                    android:layout_width="170dp"
+                    android:layout_height="140dp"
+                    android:layout_margin="10dp"
+                    android:background="@mipmap/watch"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
