--- a/app/src/main/res/layout/item_video_player.xml
+++ b/app/src/main/res/layout/item_video_player.xml
@@ -31,7 +31,7 @@
                 android:layout_height="66dp"
                 android:background="@drawable/usericon_background"/>
             <com.example.learningmachineparentsapp.View.RoundImageView
-                android:id="@+id/videoplay_iv_usericon"
+                android:id="@+id/itemplay_iv_usericon"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="3dp"
@@ -46,12 +46,12 @@
             android:layout_marginBottom="10dp"
             android:layout_gravity="center_horizontal">
             <ImageView
-                android:id="@+id/videoplay_iv_like"
+                android:id="@+id/itemplay_iv_like"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@mipmap/like"/>
             <TextView
-                android:id="@+id/videoplay_tv_like"
+                android:id="@+id/itemplay_tv_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -66,12 +66,12 @@
             android:layout_marginBottom="10dp"
             android:layout_gravity="center_horizontal">
             <ImageView
-                android:id="@+id/videoplay_iv_comment"
+                android:id="@+id/itemplay_iv_comment"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@mipmap/comment"/>
             <TextView
-                android:id="@+id/videoplay_tv_comment"
+                android:id="@+id/itemplay_tv_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -85,7 +85,7 @@
             android:orientation="vertical"
             android:layout_gravity="center_horizontal">
             <ImageView
-                android:id="@+id/videoplay_iv_award"
+                android:id="@+id/itemplay_iv_award"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
@@ -104,7 +104,7 @@
             android:orientation="vertical"
             android:layout_gravity="center_horizontal">
             <ImageView
-                android:id="@+id/videoplay_iv_more"
+                android:id="@+id/itemplay_iv_more"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
