--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -321,8 +321,8 @@
                     android:id="@+id/discover_tv_shop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="15sp"
                     android:textColor="@color/black"
                     android:text="商城"/>
 
@@ -350,9 +350,11 @@
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/discover_vp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="800dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:layout_below="@id/discover_con"/>
 
         </RelativeLayout>
