--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="210dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="7dp"
@@ -13,8 +13,8 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/itemgoods_iv_icon"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:src="@mipmap/ic_launcher"
@@ -32,21 +32,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="荒野求生少年生存"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:maxLines="1"
             android:textColor="@color/black"
             android:layout_margin="5dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_margin="5dp"
-            android:layout_height="30dp">
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_height="20dp">
             <TextView
                 android:id="@+id/itemgoods_tv1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="￥"
                 android:textColor="@color/red_normal"
-                android:textSize="18sp"/>
+                android:textSize="14sp"/>
             <TextView
                 android:id="@+id/itemgoods_tv_money"
                 android:layout_width="wrap_content"
@@ -54,7 +57,7 @@
                 android:text="77.77"
                 android:layout_toRightOf="@id/itemgoods_tv1"
                 android:textColor="@color/red_normal"
-                android:textSize="18sp"/>
+                android:textSize="14sp"/>
             <TextView
                 android:id="@+id/itemgoods_tv_peo"
                 android:layout_width="wrap_content"
@@ -62,12 +65,14 @@
                 android:text="7777"
                 android:layout_alignBottom="@id/itemgoods_tv_money"
                 android:layout_toRightOf="@id/itemgoods_tv_money"
+                android:textSize="10sp"
                 android:textColor="#C3C3C3"
                 android:layout_marginLeft="10dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="人已付款"
+                android:textSize="10sp"
                 android:layout_alignBottom="@id/itemgoods_tv_peo"
                 android:layout_toRightOf="@id/itemgoods_tv_peo"
                 android:textColor="#C3C3C3"/>
