--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,7 +52,7 @@
                 app:bl_autoPlaying="true"
                 app:bl_centerScale="1.3"
                 app:bl_itemSpace="10dp"
-                app:bl_moveSpeed="1.8" />
+                app:bl_moveSpeed="2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -64,42 +64,40 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <Button
-                        android:id="@+id/hp_btn_tovideochat"
+                    <ImageView
+                        android:id="@+id/hp_iv_tovideochat"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
-                        android:layout_weight="1"
-                        android:background="@mipmap/videochat"/>
-                    <Button
-                        android:id="@+id/hp_btn_tohomework"
+                        android:adjustViewBounds="true"
+                        android:layout_weight="1"/>
+                    <ImageView
+                        android:id="@+id/hp_iv_tohomework"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
+                        android:adjustViewBounds="true"
                         android:layout_weight="1"
-                        android:layout_toRightOf="@+id/hp_btn_toupload"
-                        android:layout_alignTop="@+id/hp_btn_toupload"
-                        android:layout_centerHorizontal="true"
-                        android:background="@mipmap/homework"/>
+                        android:layout_centerHorizontal="true"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <Button
-                        android:id="@+id/hp_btn_tocontrol"
+                    <ImageView
+                        android:id="@+id/hp_iv_tocontrol"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
-                        android:layout_weight="1"
-                        android:background="@mipmap/control"/>
-                    <Button
-                        android:id="@+id/hp_btn_towatch"
+                        android:adjustViewBounds="true"
+                        android:layout_weight="1"/>
+                    <ImageView
+                        android:id="@+id/hp_iv_towatch"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
-                        android:layout_weight="1"
-                        android:background="@mipmap/watch"/>
+                        android:adjustViewBounds="true"
+                        android:layout_weight="1"/>
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
