--- a/app/src/main/res/layout/item_main_banner.xml
+++ b/app/src/main/res/layout/item_main_banner.xml
@@ -2,14 +2,19 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="250dp"
-    android:layout_height="100dp"
+    android:layout_width="350dp"
+    android:layout_height="180dp"
     app:cardCornerRadius="0dp">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <!--<androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/item_mb_iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop" />-->
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/item_mb_lc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.cardview.widget.CardView>
