--- a/app/src/main/res/layout/activity_module.xml
+++ b/app/src/main/res/layout/activity_module.xml
@@ -22,66 +22,72 @@
             android:orientation="vertical">
 
             <!--折线图-->
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
-                <TextView
-                    android:id="@+id/tv_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:clickable="true"
-                    android:paddingBottom="2dp"
-                    android:text="今日"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp" />
-                <ImageView
-                    android:id="@+id/iv_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/tv_date"
-                    android:clickable="true"
-                    android:padding="10dp"
-                    android:src="@mipmap/todown" />
-                <TextView
-                    android:id="@+id/tv_unit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginRight="15dp"
-                    android:text="单位°"
-                    android:textColor="#FFFFFF"
-                    android:textSize="12sp" />
-            </RelativeLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:alpha="0.3"
-                android:background="#FFFFFF" />
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/gradient_bg_regist">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+                    <TextView
+                        android:id="@+id/module_tv_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:clickable="true"
+                        android:paddingBottom="2dp"
+                        android:text="今日"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20sp" />
+                    <ImageView
+                        android:id="@+id/module_iv_date"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@id/module_tv_date"
+                        android:clickable="true"
+                        android:padding="10dp"
+                        android:src="@mipmap/todown" />
+                    <TextView
+                        android:id="@+id/module_tv_unit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="15dp"
+                        android:text="单位°"
+                        android:textColor="#FFFFFF"
+                        android:textSize="12sp" />
+                </RelativeLayout>
                 <View
-                    android:layout_width="42dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:alpha="0.3"
+                    android:background="#FFFFFF" />
+                <FrameLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:alpha="0.3"
-                    android:background="#FFFFFF" />
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="42dp"
-                    android:layout_gravity="bottom"
-                    android:alpha="0.3"
-                    android:background="#FFFFFF" />
-                <com.github.mikephil.charting.charts.LineChart
-                    android:id="@+id/moudule_lc_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"/>
-            </FrameLayout>
+                    android:layout_margin="10dp">
+                    <View
+                        android:layout_width="42dp"
+                        android:layout_height="match_parent"
+                        android:alpha="0.3"
+                        android:background="#FFFFFF" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="42dp"
+                        android:layout_gravity="bottom"
+                        android:alpha="0.3"
+                        android:background="#FFFFFF" />
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/moudule_lc_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"/>
+                </FrameLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
