--- a/app/src/main/res/layout/activity_homework.xml
+++ b/app/src/main/res/layout/activity_homework.xml
@@ -32,35 +32,57 @@
             <EditText
                 android:id="@+id/homework_et_clip"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="120dp"
                 android:layout_below="@+id/homework_tit"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:maxLines="6"
+                android:maxLines="4"
+                android:textSize="18sp"
                 android:gravity="left"
                 android:padding="10dp"
                 android:background="@drawable/border_et_hw"
                 android:hint="请输入作业"/>
 
-            <Button
-                android:id="@+id/homework_btn_add"
-                android:layout_width="75dp"
+            <RelativeLayout
+                android:id="@+id/hw_rl1"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="10dp"
-                android:textColor="@color/white"
-                android:background="@drawable/upload_btn_background"
-                android:text="添加"
-                android:layout_below="@id/homework_et_clip"/>
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_below="@id/homework_et_clip">
+                <TextView
+                    android:id="@+id/hw_rl1_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="16sp"
+                    android:text="智能输入"/>
+                <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/hw_rl1_tv"/>
+
+                <Button
+                    android:id="@+id/homework_btn_add"
+                    android:layout_width="75dp"
+                    android:layout_height="35dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/white"
+                    android:background="@drawable/upload_btn_background"
+                    android:text="添加"/>
+            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/homework_del"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_below="@id/homework_btn_add"
+                android:layout_below="@id/hw_rl1"
                 android:layout_marginTop="20dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp">
