--- a/app/src/main/res/layout/activity_watch.xml
+++ b/app/src/main/res/layout/activity_watch.xml
@@ -10,7 +10,7 @@
 
     <SurfaceView
         android:id="@+id/watch_sv_camera"
-        android:layout_width="384dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"/>
 
@@ -21,14 +21,14 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp">
         <ImageView
-            android:id="@+id/watch_iv_colse"
+            android:id="@+id/watch_iv_close"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/watch_iv_colse"
+            android:layout_below="@id/watch_iv_close"
             android:layout_marginTop="5dp"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white"
