--- a/app/src/main/res/layout/item_main_banner.xml
+++ b/app/src/main/res/layout/item_main_banner.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="350dp"
     android:layout_height="180dp"
-    app:cardCornerRadius="0dp">
+    android:layout_margin="5dp"
+    app:cardElevation="5dp"
+    app:cardCornerRadius="20dp">
 
     <!--<androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/item_mb_iv"
@@ -14,6 +16,7 @@
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/item_mb_lc"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
